--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "env": {
-        "es6": true
+        "es6": true,
+        "browser": true
     },
     "extends": [
         "plugin:react/recommended",
@@ -34,6 +35,8 @@
       "no-unused-expressions": "off",
       "prettier/prettier": "error",
       "react/prop-types": "off",
+      "@typescript-eslint/camelcase": "off",
+      "import/no-duplicates": "off",
       "react-hooks/exhaustive-deps": "warn",
       "react/jsx-filename-extension": [1, {"extensions": [".tsx"]}],
       "import/prefer-default-export": "off",
